--- a/03-dt-money/package.json
+++ b/03-dt-money/package.json
@@ -8,7 +8,8 @@
     "dev:server": "json-server server.json -p 3333 -w 500",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json:server": "yarn json-server --watch server.json -p 3333"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
